<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/buttonText"
        app:title="@string/title_settings"
        app:titleTextColor="@color/buttonBackground"
        app:titleCentered="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- DİL -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp">

                <TextView
                    android:text="@string/text_select_language"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp" />

                <Spinner
                    android:id="@+id/languageSpinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:minHeight="48dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/black" />

            <!-- TEMA -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:text="@string/text_select_theme"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:thumbTint="@color/switch_thumb_color"
                    app:trackTint="@color/switch_track_color" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/black" />

            <!-- SOSYAL -->
            <TextView
                android:text="@string/text_login_social_media"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp" />

            <LinearLayout
                android:id="@+id/socialButtonsLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/buttonInstagram"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_background"
                    android:contentDescription="Instagram"
                    android:src="@drawable/ic_instagram" />

                <ImageButton
                    android:id="@+id/buttonYouTube"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_background"
                    android:contentDescription="YouTube"
                    android:src="@drawable/ic_youtube" />

                <ImageButton
                    android:id="@+id/buttonTwitter"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_background"
                    android:contentDescription="Twitter"
                    android:src="@drawable/ic_twitter" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/buttonText" />

            <!-- KLASÖR -->
            <TextView
                android:id="@+id/textDownloadFolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_download_folder"
                android:textSize="18sp"
                android:layout_marginTop="24dp" />

            <Button
                android:id="@+id/buttonSelectFolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_select_folder"
                android:backgroundTint="@color/folder_button_background"
                android:textColor="@color/folder_button_text"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/textSelectedPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Download folder path: -"
                android:textSize="14sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
